# adb-uninstaller

./: .gitignore  AGENT_PROMPT.md  CHANGELOG.md  PLAN.md  README.md  adb_uninstaller.py  index.html  package-lock.json  package.json  plan.md  requirements.txt
assets/: ADB-Uninstaller.desktop
src/: App.tsx  errorMessages.ts  i18n.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adb.rs  ai.rs  db.rs  lib.rs  main.rs
src/components/: AIChat.tsx  AIPanel.tsx  AppTable.tsx  DebloatPresets.tsx  DetailPanel.tsx  DeviceInfoCard.tsx  DeviceSelector.tsx  LogDrawer.tsx  LogPanel.tsx  PackageDetail.tsx  SearchBar.tsx  SettingsDialog.tsx  Sidebar.tsx  api.ts
src/lib/: exportPreset.ts  presets-data.ts  presets-types.ts  safety-tags.ts
