[package]
name = "adb-uninstaller"
version = "2.0.0"
description = "ADB Uninstaller - By Teknisi Megapass Sidoarjo"
authors = ["Teknisi Megapass Sidoarjo"]
edition = "2021"

[lib]
name = "adb_uninstaller_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
